--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                             </video>
                         </a>
                         <p class="offer__text">
-                            З 2013 року ми лідери продажу найпрестижніших автомобілів у Києві, роблячи розкіш доступним для наших клієнтів
+                            Ми гарантуємо високу якість кожного автомобіля, а також надаємо повний спектр послуг, які зроблять ваше придбання простим та безпроблемним. Наша місія – забезпечити вас ідеальним автомобілем, який відповідає вашим очікуванням. 
                         </p>
                     </div>
                     <div class="offer__wrapp offer__wrapp_second">
                         <p class="offer__text">
-                            Професійна команда.Ми стали експертами у світі годинників, даруючи клієнтам елегантність і стиль
+                            Ви знайдете у нас годинники різних стилів та категорій, від класики до сучасності, від вузьких моделей до вишуканих шедеврів. Кожен годинник у нас – це рівень якості та непередбачувана естетика.
                         </p>
                         <a href="https://www.instagram.com/topwatches__kiev/" target="_blank" class="offer__logo">
                             <video id="fullscreen-video"  autoplay loop muted playsinline>
